--- a/frontend/pet_connect_app/pubspec.yaml
+++ b/frontend/pet_connect_app/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.2
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
