--- a/frontend/pet_connect_app/pubspec.yaml
+++ b/frontend/pet_connect_app/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.7
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
