--- a/frontend/pet_connect_app/pubspec.yaml
+++ b/frontend/pet_connect_app/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.7
   intl: ^0.19.0
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
