--- a/frontend/pet_connect_app/pubspec.yaml
+++ b/frontend/pet_connect_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.19.0
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
