--- a/frontend/pet_connect_app/pubspec.yaml
+++ b/frontend/pet_connect_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   web_socket_channel: ^2.4.0
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -26,4 +27,6 @@ dev_dependencies:
   flutter_lints: ^6.0.0
 
 flutter:
+  assets:
+    - .env
   uses-material-design: true
